--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
             flex: 1;
             display: flex;
             flex-direction: column;
-            transition: transform 0.2s linear;
+            transition: transform 0.5s cubic-bezier(0.25, 0.1, 0.25, 1);
             padding: 10px 5px 0 5px;
         }
 
@@ -149,7 +149,7 @@
             background-size: contain;
             background-repeat: no-repeat;
             background-position: center;
-            transition: transform 0.5s;
+            transition: opacity 0.2s;
         }
 
         .purple-shape {
@@ -346,6 +346,35 @@
             }
 
         }
+        .modal {
+            display: none;
+            position: fixed;
+            z-index: 1000;
+            left: 0;
+            top: 0;
+            width: 100%;
+            height: 100%;
+            overflow: auto;
+            background-color: rgba(0,0,0,0.4);
+        }
+
+        .modal-content {
+            background-color: #fefefe;
+            margin: 15% auto;
+            padding: 20px;
+            border: 1px solid #888;
+            width: 300px;
+            text-align: center;
+        }
+
+        #closeModal {
+            background-color: #E50914;
+            color: white;
+            padding: 10px 20px;
+            border: none;
+            cursor: pointer;
+            margin-top: 20px;
+        }
     </style>
 </head>
 <body>
@@ -388,14 +417,20 @@
         <img src="assets/social-icon2.svg" alt="Footer Right">
     </div>
 </div>
-
+<div id="winModal" class="modal">
+    <div class="modal-content">
+        <h2>Поздравляем!</h2>
+        <p>Вы выиграли <span id="winAmount"></span>!</p>
+        <button id="closeModal">Закрыть</button>
+    </div>
+</div>
 <script>
     const symbols = ['purple-shape', 'plum', 'watermelon', 'banana', 'heart', 'green-shape', 'grapes', 'lollipop', 'apple', 'blue-shape'];
 
     function createSlotItems() {
         const columns = document.querySelectorAll('.slot-column');
         columns.forEach(column => {
-            for (let i = 0; i < 5; i++) {
+            for (let i = 0; i < 5; i++) { // Увеличим количество элементов
                 const item = document.createElement('div');
                 item.classList.add('slot-item');
                 item.classList.add(symbols[Math.floor(Math.random() * symbols.length)]);
@@ -406,35 +441,58 @@
 
     function spinSlots() {
         const columns = document.querySelectorAll('.slot-column');
-        let offset = 0;
-        let spins = 0;
-        const totalSpins = 10;
-        const interval = setInterval(() => {
-            offset += 20;
-            columns.forEach(column => {
-                column.style.transform = `translateY(-${offset}px)`;
-            });
+        let delays = [0, 100, 200, 300, 400, 500]; // Задержки для каждой колонки
 
-            if (offset >= 100) {
-                offset = 0;
-                spins++;
-                columns.forEach(column => {
-                    column.style.transform = 'translateY(0)';
-                    const firstItem = column.children[0];
-                    column.appendChild(firstItem);
-                    const lastItem = column.children[column.children.length - 1];
-                    lastItem.className = 'slot-item ' + symbols[Math.floor(Math.random() * symbols.length)];
-                });
-            }
+        columns.forEach((column, index) => {
+            setTimeout(() => {
+                let topPosition = 0;
+                const finalPosition = -1000; // Конечная позиция прокрутки
+                const duration = 2000; // Длительность анимации
+                const startTime = performance.now();
 
-            if (spins >= totalSpins) {
-                clearInterval(interval);
-            }
-        }, 10);
+                function animate(currentTime) {
+                    const elapsedTime = currentTime - startTime;
+                    if (elapsedTime < duration) {
+                        topPosition = easeInOutQuad(elapsedTime, 0, finalPosition, duration);
+                        column.style.transform = `translateY(${topPosition}px)`;
+                        requestAnimationFrame(animate);
+                    } else {
+                        column.style.transform = 'translateY(0)';
+                        for (let i = 0; i < 10; i++) {
+                            const item = column.children[0];
+                            column.appendChild(item);
+                        }
+                        if (index === columns.length - 1) {
+                            setTimeout(showWinModal, 500);
+                        }
+                    }
+                }
+
+                requestAnimationFrame(animate);
+            }, delays[index]);
+        });
     }
 
+    // Функция плавности для анимации
+    function easeInOutQuad(t, b, c, d) {
+        t /= d / 2;
+        if (t < 1) return c / 2 * t * t + b;
+        t--;
+        return -c / 2 * (t * (t - 2) - 1) + b;
+    }
+
+    function showWinModal() {
+        const winAmount = Math.floor(Math.random() * 1000) + 100;
+        document.getElementById('winAmount').textContent = winAmount + " монет";
+        document.getElementById('winModal').style.display = 'block';
+    }
+
+    document.getElementById('closeModal').addEventListener('click', function() {
+        document.getElementById('winModal').style.display = 'none';
+    });
+
     createSlotItems();
-    setInterval(spinSlots, 5000);
+    spinSlots();
 </script>
 </body>
 </html>
